# delta-widgets

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  creator-index.html  hash-deps.cjs  index.html  mkdocs.yml  package-lock.json  package.json  sitemap.xml  vite.config.ts  widget-index.html
.github/: FUNDING.yml
commands/: index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  migration.rs
src-tauri/src/commands/: analytics.rs  audio.rs  media.rs  migrate.rs  mod.rs  services.rs  store.rs  system.rs  utils.rs  widget.rs
src-tauri/src/migrations/: _20250910172425_fix_label_key.rs  _20260104192742_update_media.rs  _20260104194741_update_weather.rs  _20260104194931_update_battery.rs  _20260429163326_add_visualizer.rs  _20260429171947_add_media_visualizer.rs  mod.rs
src-tauri/src/plugins/: localhost.rs  mod.rs
src-tauri/src/setup/: init.rs  utils.rs
src-tauri/widget_templates/battery/: manifest.json
src-tauri/widget_templates/datetime/: manifest.json
src-tauri/widget_templates/disk/: manifest.json
src-tauri/widget_templates/google/: manifest.json
src-tauri/widget_templates/gpt/: manifest.json
src-tauri/widget_templates/media/: manifest.json
src-tauri/widget_templates/media-viz/: manifest.json
src-tauri/widget_templates/ram/: manifest.json
src-tauri/widget_templates/system/: manifest.json
src-tauri/widget_templates/visualizer/: manifest.json
src-tauri/widget_templates/weather/: manifest.json
(+175 files in other folders)
